--- a/ExamDev/Views/Shared/_Navbar.cshtml
+++ b/ExamDev/Views/Shared/_Navbar.cshtml
@@ -14,7 +14,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" asp-controller="Log" asp-action="index">Create Log
+          <a class="nav-link active" asp-controller="Report" asp-action="index">Create Log
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
