--- a/ExamDev/Views/User/Edit.cshtml
+++ b/ExamDev/Views/User/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ExamDev.Infra.User
 <div class="container mt-4">
     <form method="post" asp-controller="User" asp-action="Edit">
-    <h4>Create User</h4>
+    <h4>Edit User</h4>
     <div class="card p-4 mt-3">
         <div class="row g-3">
             <div class="col-sm-12">
